--- a/source/sass/blocks/blog.scss
+++ b/source/sass/blocks/blog.scss
@@ -58,7 +58,7 @@
   row-gap: 2.4vw;
   column-gap: 2.4vw;
   grid-template-columns: 41.7vw 41.7vw;
-  grid-template-rows: 22vw 22vw;
+  // grid-template-rows: 22vw 22vw;
   grid-template-areas: "block1 block3"
     "block2 block3";
 
@@ -80,18 +80,18 @@
   row-gap: 0;
   column-gap: 0;
   grid-template-columns: 20.9vw 20.9vw;
-  grid-template-rows: 22vw;
+  // grid-template-rows: 22vw;
   grid-template-areas: "pic article";
 
   @media (max-width: $tablet-width) {
     grid-template-columns: 44vw 44vw;
-    grid-template-rows: 38.9vw;
+    // grid-template-rows: 38.9vw;
     grid-template-areas: "pic article";
   }
 
   @media (max-width: $mobile-width) {
     grid-template-columns: 91vw;
-    grid-template-rows: 80vw 80vw;
+    // grid-template-rows: 80vw 80vw;
     grid-template-areas: "pic"
       "article";
   }
@@ -103,18 +103,18 @@
   row-gap: 0;
   column-gap: 0;
   grid-template-columns: 20.9vw 20.9vw;
-  grid-template-rows: 22vw;
+  // grid-template-rows: 22vw;
   grid-template-areas: "article pic";
 
   @media (max-width: $tablet-width) {
     grid-template-columns: 44vw 44vw;
-    grid-template-rows: 38.9vw;
+    // grid-template-rows: 38.9vw;
     grid-template-areas: "article pic";
   }
 
   @media (max-width: $mobile-width) {
     grid-template-columns: 91vw;
-    grid-template-rows: 80vw 80vw;
+    // grid-template-rows: 80vw 80vw;
     grid-template-areas: "pic"
       "article";
   }
@@ -126,17 +126,17 @@
   row-gap: 2.3vw;
   column-gap: 0;
   grid-template-columns: 20.9vw 20.9vw;
-  grid-template-rows: 22vw 22vw;
+  // grid-template-rows: 22vw auto;
 
   @media (max-width: $tablet-width) {
     grid-template-columns: 44vw 44vw;
-    grid-template-rows: 38.9vw;
+    // grid-template-rows: 38.9vw;
   }
 
   @media (max-width: $mobile-width) {
     row-gap: 0;
     grid-template-columns: 91vw;
-    grid-template-rows: 80vw 80vw;
+    // grid-template-rows: 80vw 80vw;
   }
 }
 
@@ -146,6 +146,7 @@
   background-color: $background2;
   background-repeat: no-repeat;
   background-size: cover;
+  min-height: 22vw;
 
   @media (min-resolution: 2dppx) {
     background: url("../img/jess-desktop@2x.jpg");
@@ -155,6 +156,7 @@
   @media (max-width: $tablet-width) {
     background: url("../img/jess-tablet@1x.jpg");
     background-size: cover;
+    min-height: 38.9vw;
 
     @media (min-resolution: 2dppx) {
       background: url("../img/jess-tablet@2x.jpg");
@@ -165,6 +167,7 @@
   @media (max-width: $mobile-width) {
     background: url("../img/jess-mobile@1x.jpg");
     background-size: cover;
+    min-height: 80vw;
 
     @media (min-resolution: 2dppx) {
       background: url("../img/jess-mobile@2x.jpg");
@@ -179,6 +182,7 @@
   background-color: $background2;
   background-repeat: no-repeat;
   background-size: cover;
+  min-height: 22vw;
 
   @media (min-resolution: 2dppx) {
     background: url("../img/alex-desktop@2x.jpg");
@@ -188,6 +192,7 @@
   @media (max-width: $tablet-width) {
     background: url("../img/alex-tablet@1x.jpg");
     background-size: cover;
+    min-height: 38.9vw;
 
     @media (min-resolution: 2dppx) {
       background: url("../img/alex-tablet@2x.jpg");
@@ -198,6 +203,7 @@
   @media (max-width: $mobile-width) {
     background: url("../img/alex-mobile@1x.jpg");
     background-size: cover;
+    min-height: 80vw;
 
     @media (min-resolution: 2dppx) {
       background: url("../img/alex-mobile@2x.jpg");
@@ -213,6 +219,7 @@
   background-color: $background2;
   background-repeat: no-repeat;
   background-size: cover;
+  min-height: 44vw;
 
   @media (min-resolution: 2dppx) {
     background: url("../img/alve-desktop@2x.jpg");
@@ -224,6 +231,7 @@
     grid-row: 1 / 2;
     background: url("../img/alve-tablet@1x.jpg");
     background-size: cover;
+    min-height: 38.9vw;
 
     @media (min-resolution: 2dppx) {
       background: url("../img/alve-tablet@2x.jpg");
@@ -236,6 +244,7 @@
     grid-row: 1 / 2;
     background: url("../img/alve-mobile@1x.jpg");
     background-size: cover;
+    min-height: 80vw;
 
     @media (min-resolution: 2dppx) {
       background: url("../img/alve-mobile@2x.jpg");
@@ -247,11 +256,16 @@
 .blog__item--one .blog__item-text,
 .blog__item--two .blog__item-text {
   grid-area: article;
+
+  @media (max-width: $mobile-width) {
+    min-height: 80vw;
+  }
 }
 
 .blog__item--three .blog__item-text {
   grid-column: 2 / 3;
   grid-row: 2 / 3;
+  min-height: 21vw;
 
   @media (max-width: $tablet-width) {
     grid-column: 2 / 3;
@@ -261,6 +275,7 @@
   @media (max-width: $mobile-width) {
     grid-column: 1/ 2;
     grid-row: 2 / 3;
+    min-height: 80vw;
   }
 }
 
