--- a/source/sass/blocks/new.scss
+++ b/source/sass/blocks/new.scss
@@ -3,11 +3,11 @@
   flex-wrap: wrap;
   justify-content: center;
   align-content: center;
-  margin-bottom: 115px;
-  padding-left: 19px;
+  margin-bottom: 128px;
+  // padding-left: 19px;
 
   @media (max-width: $tablet-width) {
-    margin-bottom: 65px;
+    margin-bottom: 79px;
     padding-left: 0;
   }
 
@@ -99,7 +99,7 @@
     height: 1px;
     background-color: $background2;
     top: 0;
-    left: 30px;
+    left: 0;
 
     @media (max-width: $tablet-width) {
       width: 36px;
@@ -114,23 +114,23 @@
     border-bottom: 1px solid $background2;
     border-right: 1px solid $background2;
     top: -5px;
-    left: 30px;
+    left: 2px;
     transform: rotate(-225deg);
   }
 }
 
 .new__button--right {
   &::before {
-    left: -45px;
+    left: -20px;
 
     @media (max-width: $tablet-width) {
-      left: -52px;
+      left: -26px;
     }
   }
 
   &::after {
     transform: rotate(310deg);
-    left: -30px;
+    left: -3px;
   }
 }
 
