--- a/source/sass/blocks/blog.scss
+++ b/source/sass/blocks/blog.scss
@@ -58,7 +58,6 @@
   row-gap: 2.4vw;
   column-gap: 2.4vw;
   grid-template-columns: 41.7vw 41.7vw;
-  // grid-template-rows: 22vw 22vw;
   grid-template-areas: "block1 block3"
     "block2 block3";
 
@@ -70,7 +69,8 @@
   }
 
   @media (max-width: $mobile-width) {
-    gap: 12.5vw;
+    gap: 40px;
+    align-items: center;
   }
 }
 
@@ -80,18 +80,15 @@
   row-gap: 0;
   column-gap: 0;
   grid-template-columns: 20.9vw 20.9vw;
-  // grid-template-rows: 22vw;
   grid-template-areas: "pic article";
 
   @media (max-width: $tablet-width) {
     grid-template-columns: 44vw 44vw;
-    // grid-template-rows: 38.9vw;
     grid-template-areas: "pic article";
   }
 
   @media (max-width: $mobile-width) {
-    grid-template-columns: 91vw;
-    // grid-template-rows: 80vw 80vw;
+    grid-template-columns: 290px;
     grid-template-areas: "pic"
       "article";
   }
@@ -103,18 +100,15 @@
   row-gap: 0;
   column-gap: 0;
   grid-template-columns: 20.9vw 20.9vw;
-  // grid-template-rows: 22vw;
   grid-template-areas: "article pic";
 
   @media (max-width: $tablet-width) {
     grid-template-columns: 44vw 44vw;
-    // grid-template-rows: 38.9vw;
     grid-template-areas: "article pic";
   }
 
   @media (max-width: $mobile-width) {
-    grid-template-columns: 91vw;
-    // grid-template-rows: 80vw 80vw;
+    grid-template-columns: 290px;
     grid-template-areas: "pic"
       "article";
   }
@@ -126,17 +120,14 @@
   row-gap: 2.3vw;
   column-gap: 0;
   grid-template-columns: 20.9vw 20.9vw;
-  // grid-template-rows: 22vw auto;
 
   @media (max-width: $tablet-width) {
     grid-template-columns: 44vw 44vw;
-    // grid-template-rows: 38.9vw;
   }
 
   @media (max-width: $mobile-width) {
     row-gap: 0;
-    grid-template-columns: 91vw;
-    // grid-template-rows: 80vw 80vw;
+    grid-template-columns: 290px;
   }
 }
 
@@ -167,7 +158,7 @@
   @media (max-width: $mobile-width) {
     background: url("../img/jess-mobile@1x.jpg");
     background-size: cover;
-    min-height: 80vw;
+    min-height: 256px;
 
     @media (min-resolution: 2dppx) {
       background: url("../img/jess-mobile@2x.jpg");
@@ -203,7 +194,7 @@
   @media (max-width: $mobile-width) {
     background: url("../img/alex-mobile@1x.jpg");
     background-size: cover;
-    min-height: 80vw;
+    min-height: 256px;
 
     @media (min-resolution: 2dppx) {
       background: url("../img/alex-mobile@2x.jpg");
@@ -244,7 +235,7 @@
     grid-row: 1 / 2;
     background: url("../img/alve-mobile@1x.jpg");
     background-size: cover;
-    min-height: 80vw;
+    min-height: 256px;
 
     @media (min-resolution: 2dppx) {
       background: url("../img/alve-mobile@2x.jpg");
@@ -258,7 +249,7 @@
   grid-area: article;
 
   @media (max-width: $mobile-width) {
-    min-height: 80vw;
+    min-height: 256px;
   }
 }
 
@@ -275,7 +266,7 @@
   @media (max-width: $mobile-width) {
     grid-column: 1/ 2;
     grid-row: 2 / 3;
-    min-height: 80vw;
+    min-height: 256px;
   }
 }
 
@@ -300,8 +291,8 @@
   }
 
   @media (max-width: $mobile-width) {
-    margin-top: 14vw;
-    margin-bottom: 4.4vw;
+    margin-top: 45px;
+    margin-bottom: 13px;
   }
 }
 
@@ -311,7 +302,7 @@
   }
 
   @media (max-width: $mobile-width) {
-    margin-top: 19vw;
+    margin-top: 62px;
   }
 }
 
@@ -329,8 +320,9 @@
   }
 
   @media (max-width: $mobile-width) {
-    margin-bottom: 11vw;
-    width: 54vw;
+    margin-bottom: 35px;
+    width: 57%;
+    align-self: center;
   }
 }
 
