--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -39,11 +39,7 @@
   width: 250px;
 
   @media (max-width: $tablet-width) {
-    width: 768px;
-  }
-
-  @media (max-width: $mobile-width) {
-    width: 320px;
+    width: 100%;
   }
 }
 
@@ -53,7 +49,7 @@
   flex-wrap: wrap;
   gap: 2.3vw;
   width: 64vw;
-  margin-bottom: 33px;
+  margin-bottom: 29px;
 
   @media (max-width: $tablet-width) {
     width: 89vw;
@@ -71,7 +67,7 @@
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
-  margin-bottom: 10px;
+  margin-bottom: 4px;
 
   @media (max-width: $mobile-width) {
     margin-bottom: 0;
@@ -328,8 +324,8 @@
   &::before {
     content: "";
     position: absolute;
-    top: 0;
-    left: -10px;
+    top: 4px;
+    left: 0;
     width: 11px;
     height: 11px;
     border-bottom: 1px solid $background2;
