--- a/source/sass/blocks/swiper.scss
+++ b/source/sass/blocks/swiper.scss
@@ -14,3 +14,11 @@
     height: 80vw;
   }
 }
+
+// .swiper-slide-wrapper {
+//   display: flex;
+//   flex-wrap: wrap;
+//   gap: 30px;
+//   flex-direction: column;
+//   justify-content: space-between;
+// }
