--- a/source/sass/blocks/swiper.scss
+++ b/source/sass/blocks/swiper.scss
@@ -17,8 +17,10 @@
 
 .swiper-pag-bullet {
   background: transparent;
+  color: $brown;
 }
 
 .swiper-pag-bullet-active {
   background: transparent;
+  color: $black2;
 }
